--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ville
 
-spring.datasource.url=jdbc:h2:mem:ville
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mariadb://localhost:3306/ville_db
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.username=${MARIADB_USERNAME}
+spring.datasource.password=${MARIADB_PASSWORD}
 spring.h2.console.enabled=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
