--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=${MARIADB_PASSWORD}
 spring.h2.console.enabled=true
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=test
